# PlanckIntegrals

./: .gitignore  ClarkApprox.py  ErrorCode.py  Goldin.py  INSTALL.md  MANIFEST.in  MPMathIntegral.py  ParallelTiming.py  PolyLog.py  PolyLogs.py  Quadrature.py  README.md  RationalApprox.py  TimingCode.py  Zimmerman.py  example_installed.py  example_usage.py  planck_integral_module.py  pyproject.toml  setup.py  test_Ploylogs.py
BenchmarkResults/: Bgs_Ng10.csv  Bgs_Ng100.csv  Bgs_Ng11.csv  Bgs_Ng12.csv  Bgs_Ng13.csv  Bgs_Ng14.csv  Bgs_Ng15.csv  Bgs_Ng16.csv  Bgs_Ng17.csv  Bgs_Ng18.csv  Bgs_Ng19.csv  Bgs_Ng2.csv  Bgs_Ng20.csv  Bgs_Ng21.csv  Bgs_Ng22.csv  Bgs_Ng23.csv  Bgs_Ng24.csv  Bgs_Ng25.csv  Bgs_Ng26.csv  Bgs_Ng27.csv  Bgs_Ng28.csv  Bgs_Ng29.csv  Bgs_Ng3.csv  Bgs_Ng30.csv  Bgs_Ng31.csv  Bgs_Ng32.csv  Bgs_Ng33.csv  Bgs_Ng34.csv  Bgs_Ng35.csv  Bgs_Ng36.csv  Bgs_Ng37.csv  Bgs_Ng38.csv  Bgs_Ng39.csv  Bgs_Ng4.csv  Bgs_Ng40.csv  Bgs_Ng41.csv  Bgs_Ng42.csv  Bgs_Ng43.csv  Bgs_Ng44.csv  Bgs_Ng45.csv  (+60 more)
__pycache__/: ClarkApprox.clark_formula-108.py39.1.nbc  ClarkApprox.clark_formula-108.py39.2.nbc  ClarkApprox.clark_formula-108.py39.3.nbc  ClarkApprox.clark_formula-108.py39.nbi  ClarkApprox.clark_formula_parallel-118.py39.1.nbc  ClarkApprox.clark_formula_parallel-118.py39.nbi  ClarkApprox.clark_intermediate-103.py39.1.nbc  ClarkApprox.clark_intermediate-103.py39.2.nbc  ClarkApprox.clark_intermediate-103.py39.nbi  ClarkApprox.compute_Pi_L-70.py39.1.nbc  ClarkApprox.compute_Pi_L-70.py39.2.nbc  ClarkApprox.compute_Pi_L-70.py39.nbi  Goldin.PiGoldin-4.py39.1.nbc  (+154 more)
(+3 files in other folders)
